<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#453E3E"
    android:textAlignment="center">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/GameGrid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="1dp"
        app:barrierMargin="10dp"
        app:columnCount="5"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rowCount="7">

        <TextView
            android:id="@+id/Tx1"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginBottom="1dp"
            android:background="@color/white"
            android:backgroundTint="#FFFFFF"
            android:backgroundTintMode="multiply"
            android:fontFamily="monospace"
            android:shadowColor="#C62828"
            android:textAlignment="center"
            android:textColor="#9E9393"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tx2"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@color/purple_200"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tx3"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@color/purple_700"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tx4"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="#F44336"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tx5"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="#FFEB3B"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tx10"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginBottom="1dp"
            android:background="#3F51B5"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tx9"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="#4CAF50"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tx8"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="#673AB7"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tx7"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="#E91E63"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tx6"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="#00BCD4"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tx11"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginBottom="1dp"
            android:background="@color/purple_200"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tx12"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@color/purple_700"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tx13"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="#F44336"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tx14"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="#FFEB3B"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tx15"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@color/teal_200"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tx20"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginBottom="1dp"
            android:background="#8BC34A"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tx19"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="#3F51B5"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tx18"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="#4CAF50"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tx17"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="#673AB7"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tx16"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="#E91E63"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tx21"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginBottom="1dp"
            android:background="@color/purple_200"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tx22"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@color/purple_700"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tx23"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="#F44336"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tx24"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="#FFEB3B"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tx25"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@color/purple_700"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tx30"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginBottom="1dp"
            android:background="#E91E63"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tx29"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@color/teal_200"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tx28"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="#4CAF50"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tx27"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="#9C27B0"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tx26"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="#E91E63"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tx31"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@color/purple_500"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tx32"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="#FFEB3B"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tx33"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="#8BC34A"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tx34"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="#F44336"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tx35"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@color/black"
            android:fontFamily="monospace"
            android:text="@string/end"
            android:textAlignment="center"
            android:textColor="#A69E9E"
            android:textSize="30sp" />

    </androidx.gridlayout.widget.GridLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="419dp"
        android:layout_height="140dp"
        android:background="#343537"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/currentPlayerText"
            android:layout_width="125dp"
            android:layout_height="29dp"
            android:background="#551CBA"
            android:text="@string/number_of_players"
            android:textAlignment="center"
            android:textColor="#B0BEC5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/rollButton"
            android:layout_width="94dp"
            android:layout_height="140dp"
            android:background="#513777"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/roll"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/textoutDisplay"
            android:layout_width="320dp"
            android:layout_height="110dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/start_rolling"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:text="@string/roll_to_begin"
            android:textColor="#9E9E9E"
            android:textColorHint="#9E9E9E"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/rollButton"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/dice1Display"
            android:layout_width="97dp"
            android:layout_height="32dp"
            android:text="@string/dice1"
            android:textColor="#9E9E9E"
            app:layout_constraintBottom_toTopOf="@+id/textoutDisplay"
            app:layout_constraintEnd_toStartOf="@+id/dice2Display"
            app:layout_constraintStart_toEndOf="@+id/currentPlayerText"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dice2Display"
            android:layout_width="103dp"
            android:layout_height="31dp"
            android:text="@string/dice2"
            android:textColor="#9E9E9E"
            app:layout_constraintBottom_toTopOf="@+id/textoutDisplay"
            app:layout_constraintEnd_toStartOf="@+id/rollButton"
            app:layout_constraintStart_toEndOf="@+id/dice1Display"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>